[package]
name = "crabnest"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "1.3.2"
bytemuck = { version = "1.7.3", features = ["derive"] }
clap = { version = "3.0.10", features = ["derive"] }
modular-bitfield = "0.11.2"
nix = "0.23.1"
once_cell = "1.9.0"
ouroboros = "0.14.0"
rustyline = "9.1.2"
sdl2 = { version = "0.35.1", features = ["bundled"]}
signal-hook = "0.3.13"
